Changes to version 2.4-0

  o Small fixes.

Changes to version 2.4-0

  o The R Commander editor for Markdown and knitr documents is now a non-modal dialog, so may remain open while you work.
  
  o Improvement to the barplot dialog (suggestions of Beatriz Lacruz).
  
  o Added dialog for plotting the distribution of a discrete numeric variable (suggestion of Beatriz Lacruz).
  
  o Allow color selection in pie charts.
  
  o Small improvements to activation of menu items.
  
  o Rcmdr showData.threshold option now tests number of rows as well as number of columns.
  
  o Introduced Rcmdr scientific.notation option to suppress scientific notation; corresponds to R scipen option, and default is 5 (as opposed to 0 in R).
  
  o Improved labeling of two-variances test dialog (suggestion of Beatriz Lacruz).
  
  o Improvements to Rcmdr data editor in handling blanks and quotes.
  
  o Moved the following standard packages from Imports: to Depends: graphics, methods, stats.
  
  o Allow entry of variable names in enter table dialog (suggestion of Beatriz Lacruz).
  
  o Improved import of Stata and SPSS data files and provision to import SAS b7dat files.
  
  o Added right-click context menus to text entry boxes.
  
  o Getting Started manual is now supplied as a vignette (with help from Manuel Munoz Marquez).
  
  o Refactored Commander() code.
  
  o Separators in plug-in menus can now be placed more precisely, if necessary (following a problem reported by Manuel Munoz Marquez).
  
  o Reworked handling of statistical models in plug-ins.
  
  o Boostrap dialog will now plot bootstrap samples.
  
  o Parameter estimate correlations are now reported with VIFs.
  
  o Index plot dialog will now plot more than one variable (suggestion of Manuel Munoz Marquez).
  
  o Numerical summaries dialog has new option to show binned distribution of frequency counts (suggestion of Manuel Munoz Marquez).
  
  o Small interface improvements.
  