@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 2.4-1
-Date: 2017-09-14
+Date: 2017-10-06
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Milan", "Bouchet-Valat", role = "aut"),
